<resources>
    <string name="app_name">Hangman</string>
    <string name="start">Start</string>
    <string name="hangman">HangMan!</string>
    <string name="attempts">Attempts:</string>
    <string name="select_a_letter">Lets Play Hangman!</string>
    <string name="_10">10</string>
    <string name="letters_used">Letters Used:</string>
    <string name="enter_letter">Letter or Phrase:</string>
    <string name="enter_letter_or_phrase">Enter Letter Or Phrase</string>
    <string name="quit">Quit</string>
    <string name="play_again">Play Again</string>

    <string name="hang_man_notification_title_template">Hang man: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="hang_man_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
